# flow-pomodoro

./: .gitignore  CMakeLists.txt  README  flow.pro  global.pri
flow_main/: CMakeLists.txt  flow_main.pro  main.cpp
plugin_interface/: CMakeLists.txt  distractionsplugin.cpp  distractionsplugin.h  flow_interface_export.h  plugin_interface.pro  plugininterface.cpp  plugininterface.h  storageplugin.cpp  storageplugin.h
plugins/: CMakeLists.txt  plugins.pro
plugins/distractions/: CMakeLists.txt  distractions.pri
plugins/distractions/hosts/: CMakeLists.txt  hosts.cpp  hosts.h  hosts.pro
plugins/distractions/kmail/: CMakeLists.txt  kmail.cpp  kmail.h
plugins/distractions/pidgin/: CMakeLists.txt  pidgin.cpp  pidgin.h  pidgin.pro
plugins/distractions/shellscript/: CMakeLists.txt  shellscript.cpp  shellscript.h  shellscript.pro
plugins/storage/: CMakeLists.txt  storage.pri  storage.pro
plugins/storage/textfile/: CMakeLists.txt  Config.qml  textfile.cpp  textfile.h  textfile.pro  textfilebackendinstance.cpp  textfilebackendinstance.h  textfileplugin.qrc
src/: CMakeLists.txt  assertingproxymodel.h  checkabletagmodel.cpp  checkabletagmodel.h  circularprogressindicator.h  controller.cpp  controller.h  distractionsplugin.cpp  distractionsplugin.h  extendedtagsmodel.cpp  extendedtagsmodel.h  flow_export.h  flowjsonbackendinstance.cpp  flowjsonbackendinstance.h  flowjsonplugin.cpp  flowjsonplugin.h  genericlistmodel.h  jsonstorage.h  kernel.cpp  kernel.h  loadmanager.h  logging.h  nonemptytagfilterproxy.cpp  nonemptytagfilterproxy.h  pluginbase.cpp  pluginbase.h  pluginmodel.cpp  pluginmodel.h  quickview.cpp  quickview.h  resources.qrc  runtimeconfiguration.cpp  runtimeconfiguration.h  settings.h  sortedtagsmodel.cpp  sortedtagsmodel.h  sortedtaskcontextmenumodel.h  src.pri  src.pro  storage.cpp  (+24 more)
src/dbus/: flow.h
src/qml/: AboutPage.qml  ConfigurePage.qml  StoragePluginConfig.qml
src/qml/config/: Distractions.qml  Plugins.qml  Storage.qml
tests/: CMakeLists.txt
